@@ -1315,6 +1315,7 @@ ConfigView.section.connection.advanced.IPTOS.tooltip=Sets traffic class / type-o
 ConfigView.section.interface.confirm_torrent_removal=Show confirmation dialog on torrent removal
 ConfigView.section.interface.confirm_torrent_removal.tooltip=Confirm when Removing a torrent from the MyTorrents view.
 MyTorrentsView.confirm_torrent_removal=Are you sure you want to remove?\n
-
+MyTorrentsView.seed_to_peer_ratio=Seed2PeerRatio
+MyTorrentsView.seed_to_peer_ratio.info=Total swarm seeds to peers ratio
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
